fix width on mobile devices

--- a/src/scss/_advice.scss
+++ b/src/scss/_advice.scss
@@ -39,7 +39,7 @@ section {
 
   @media screen and (max-width: 500px) {
     & {
-      width: auto;
+      width: 375px;
       height: auto !important;
     }
   }
